@@ -1,3 +1,8 @@
+2012-04-03  Jason Merrill  <jason@redhat.com>
+
+	PR c++/52796
+	* g++.dg/cpp0x/variadic-value1.C: New.
+
 2012-04-03  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
