@@ -1,3 +1,9 @@
+2012-04-03  Jason Merrill  <jason@redhat.com>
+
+	PR c++/52796
+	* pt.c (tsubst_initializer_list): A pack expansion with no elements
+	means value-initialization.
+
 2012-03-29  Meador Inge  <meadori@codesourcery.com>
 
 	PR c++/52672
